# devflow-k8s-deploy

./: .devflow-k8s-deploy.yml.sample  .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
devflow-docs/: DEVELOPER.md  audit.md  backlog.md  devflow-audit.md  devflow-state.md  session-summary.md
devflow-docs/.archive/: devflow-state-2026-04-21.md  devflow-state-2026-04-22T024016.md  devflow-state-2026-04-22T064814.md  devflow-state-2026-04-22T144328.md  devflow-state-2026-04-28T142319Z.md  (+6 more)
scripts/: atomic_writer.py  config_loader.py  dockerfile_generator.py  kubectl_dry_runner.py  manifest_generator.py  output_packager.py  project_analyzer.py  template_renderer.py  validate_k8s.py
tests/: conftest.py  test_atomic_writer.py  test_build_runner.py  test_cluster_config.py  test_codex_p1_p2_fixes.py  test_config_loader.py  test_dockerfile_generator.py  test_dockerfile_go_golden.py  test_dockerfile_regression_bl015.py  test_dockerfile_v0_1_1_patches.py  test_e2e_go_config_override.py  test_e2e_go_mixed_repo.py  test_e2e_go_smoke.py  test_e2e_jvm_smoke.py  test_e2e_python_smoke.py  test_kubectl_dry_runner.py  test_manifest_generator.py  test_manifest_jvm_golden.py  test_networkpolicy_generator.py  test_no_stack_hardcoding.py  test_orchestrator.py  test_output_packager.py  test_project_analyzer.py  test_project_analyzer_go.py  test_retry_loop.py  test_statefulset_generator.py  test_template_renderer.py  test_v0_2_0_runtime_fixes.py  test_validate_k8s.py  test_validators_net.py  test_validators_structure.py  test_validators_sts.py
(+98 files in other folders)
