[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devflow-k8s-deploy"
version = "0.4.0"
description = "Devflow K8s deployment skill — scripts package"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-defusedxml>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]  # tests/integration은 자동 수집됨
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
